deploy: e9c345ef529f052683e16143e3770dd9a7173ac9

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <div style=text-align:justify>
 <p>I am currently a senior at Columbia University, majoring in
 Economics - Mathematics as part of the Columbia - Sciences Po
-dual BA program. In Paris, I studied social science at Sciences Po
-and mathematics at Sorbonne Université (formerly Univerité Pierre et Marie Curie)
-as part of the Science/Social Science undergraduate dual degree program.</p>
+dual BA program. In Paris, besides Sciences Po, I also studied
+mathematics at Sorbonne Université (formerly Univerité Pierre et Marie Curie).</p>
 <p>I am very interested in economic research, particularly in industrial organization, economic history
 and political economy. I am also very interested in the applications of Natural Language Processing
-for data mining in economics. I will be applying for PhD/MA Programs in Economics and Pre-Doctoral
+for data mining in economics.</p>
+<p>I will be applying for PhD/MA Programs in Economics and Pre-Doctoral
 research positions in economics in the Fall of 2021.</p>
 <p>Outside academia, I am passionate about landscape and architecture photography
 as well as good coffee.</p>
