--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,8 @@
 <title>Projects</title>
 <meta name=description content="Michel Gutmann's personal site">
 <meta name=author content="Michel Gutmann">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7QM0HVFYY"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-D7QM0HVFYY',{anonymize_ip:!1})}</script>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel=stylesheet>
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css integrity=sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2 crossorigin=anonymous>
 <link rel=stylesheet href=/sass/researcher.min.css>
