deploy: 3f76b24260d0ad568a6b575347f4b8b40388dbc2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head>
-<meta name=generator content="Hugo 0.88.1">
+<meta name=generator content="Hugo 0.89.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <title>About</title>
@@ -37,11 +37,10 @@
 Economics - Mathematics as part of the Columbia - Sciences Po
 dual BA program. In Paris, besides Sciences Po, I also studied
 mathematics at Sorbonne Université (formerly Univerité Pierre et Marie Curie).</p>
-<p>I am very interested in economic research, particularly in industrial organization, economic history
-and political economy. I am also very interested in the applications of Natural Language Processing
-for data mining in economics.</p>
-<p>I will be applying for PhD/MA Programs in Economics and Pre-Doctoral
-research positions in economics in the Fall of 2021.</p>
+<p>I am very interested in economic research, particularly in industrial organization, spatial economics,
+economic history and political economy. I am also very interested in the applications of Natural Language
+Processing for data mining in economics.</p>
+<p>I am currently applying to Pre-Doctoral research positions in Economics to start work in the summer of 2022.</p>
 <p>Outside academia, I am passionate about landscape and architecture photography
 as well as good coffee.</p>
 </div>
