--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head>
-<meta name=generator content="Hugo 0.89.0">
+<meta name=generator content="Hugo 0.91.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <title>About</title>
@@ -36,7 +36,7 @@
 <p>I am currently a senior at Columbia University, majoring in
 Economics - Mathematics as part of the Columbia - Sciences Po
 dual BA program. In Paris, besides Sciences Po, I also studied
-mathematics at Sorbonne Université (formerly Univerité Pierre et Marie Curie).</p>
+mathematics at Sorbonne Université (formerly Université Pierre et Marie Curie).</p>
 <p>I am very interested in economic research, particularly in industrial organization, spatial economics,
 economic history and political economy. I am also very interested in the applications of Natural Language
 Processing for data mining in economics.</p>
