deploy: 877604fd1d9e0e433465ba92c80b2b0568d8ef8d

--- a/ra_work/index.html
+++ b/ra_work/index.html
@@ -31,8 +31,7 @@
 <h4 id=text-mining-with-professors-chaney-boehm-and-lashkari>Text Mining with Professors Chaney, Boehm and Lashkari</h4>
 <div style=text-align:justify>
 <p>I have worked with Professors Thomas Chaney (University of Southern California), Johannes Boehm (Sciences Po) and Danial Lashkari (Boston College)
-on their very long run growth project over the summer of 2021 and have been occasionally
-voluntarily contributing to the project since. In this role, I designed and built a end-to-end Entity
+on their very long run growth project over the summer of 2021. In this role, I designed and built a end-to-end Entity
 Linking pipeline (i.e. a Natural Language Processing pipeline which identifies
 relevant entities in unstructured text and links them to a unique value in a knowledge base).</p>
 <p>The pipeline I built, implemented in spaCy, relies on direct string matching and a Named Entity
