--- a/index.html
+++ b/index.html
@@ -1,64 +1,8 @@
-<!doctype html><html><head>
-<meta name=generator content="Hugo 0.91.0">
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>About</title>
-<meta name=description content="Michel Gutmann's personal site">
-<meta name=author content="Michel Gutmann">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7QM0HVFYY"></script>
-<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-D7QM0HVFYY',{anonymize_ip:!1})}</script>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel=stylesheet>
-<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css integrity=sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2 crossorigin=anonymous>
-<link rel=stylesheet href=/sass/researcher.min.css>
-<link rel=icon type=image/ico href=http://mgutmann.github.io/favicon.ico>
-</head>
-<body><div class="container mt-5">
-<nav class="navbar navbar-expand-sm flex-column flex-sm-row p-0">
-<a class="navbar-brand mr-sm-auto" href=http://mgutmann.github.io/>Michel Gutmann</a>
-<div class="navbar-nav flex-row">
-<a class="nav-item nav-link" href=/>About</a>
+<!doctype html><html><head><meta name=generator content="Hugo 0.101.0"><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>About</title><meta name=description content="Michel Gutmann's personal site"><meta name=author content="Michel Gutmann"><script async src="https://www.googletagmanager.com/gtag/js?id=G-D7QM0HVFYY"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","G-D7QM0HVFYY",{anonymize_ip:!1})}</script><link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css integrity=sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2 crossorigin=anonymous><link rel=stylesheet href=/sass/researcher.min.css><link rel=icon type=image/ico href=http://mgutmann.github.io/favicon.ico></head><body><div class="container mt-5"><nav class="navbar navbar-expand-sm flex-column flex-sm-row p-0"><a class="navbar-brand mr-sm-auto" href=http://mgutmann.github.io/>Michel Gutmann</a><div class="navbar-nav flex-row"><a class="nav-item nav-link" href=/>About</a>
 <span class="nav-item navbar-text mx-1">/</span>
 <a class="nav-item nav-link" href=/cv.pdf>CV</a>
 <span class="nav-item navbar-text mx-1">/</span>
 <a class="nav-item nav-link" href=/ra_work>RA Work</a>
 <span class="nav-item navbar-text mx-1">/</span>
-<a class="nav-item nav-link" href=/projects>Projects</a>
-</div>
-</nav>
-</div>
-<hr>
-<div id=content>
-<div class=container>
-<h2 id=about-me>About Me</h2>
-<figure class=avatar><img src=/avatar.jpg>
-</figure>
-<div style=text-align:justify>
-<p>I am currently a senior at Columbia University, majoring in
-Economics - Mathematics as part of the Columbia - Sciences Po
-dual BA program. In Paris, besides Sciences Po, I also studied
-mathematics at Sorbonne Université (formerly Université Pierre et Marie Curie).</p>
-<p>I am very interested in economic research, particularly in industrial organization, spatial economics,
-economic history and political economy. I am also very interested in the applications of Natural Language
-Processing for data mining in economics.</p>
-<p>I am currently applying to Pre-Doctoral research positions in Economics to start work in the summer of 2022.</p>
-<p>Outside academia, I am passionate about landscape and architecture photography
-as well as good coffee.</p>
-</div>
-<h3 id=more>More:</h3>
-<ul>
-<li><a href=/ra_work>RA Work</a></li>
-<li><a href=/projects>Personal projects</a></li>
-<li><a href=/cv.pdf>Vitae</a></li>
-<li><a href=https://linkedin.com/in/michelgutmann>LinkedIn</a></li>
-<li><a href=https://github.com/mgutmann/>GitHub</a></li>
-</ul>
-</div>
-</div>
-<div id=footer>
-<hr>
-<div class="container text-center mb-2">
-<a href=https://github.com/ojroques/hugo-researcher><small>researcher for hugo</small></a>
-</div>
-</div>
-</body>
-</html>
+<a class="nav-item nav-link" href=/projects>Projects</a></div></nav></div><hr><div id=content><div class=container><h2 id=about-me>About Me</h2><figure class=avatar><img src=/avatar.jpg></figure><div style=text-align:justify><p>I am currently a Pre-Doctoral Research Assistant within the Applied Economics group at the MIT Sloan School of Management.Previously, I was a student at Columbia University, majoring in Economics - Mathematics as part of the Columbia - Sciences Po dual BA program. In Paris, besides Sciences Po, I also studied mathematics at Sorbonne Université (formerly Univerité Pierre et Marie Curie).</p><p>I am very interested in economic research, particularly in industrial organization, spatial economics, economic history and political economy. I am also very interested in the applications of Natural Language Processing for data mining in economics.</p><p>Outside academia, I am passionate about landscape and architecture photography as well as good coffee.</p></div><h3 id=more>More:</h3><ul><li><a href=/ra_work>RA Work</a></li><li><a href=/projects>Personal projects</a></li><li><a href=/cv.pdf>Vitae</a></li><li><a href=https://linkedin.com/in/michelgutmann>LinkedIn</a></li><li><a href=https://github.com/mgutmann/>GitHub</a></li></ul></div></div><div id=footer><hr><div class="container text-center mb-2"><a href=https://github.com/ojroques/hugo-researcher><small>researcher for hugo</small></a></div></div></body></html>
